--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <label for="num">Numero do cartão de crédito:</label><br>
             <input type="number" required><br>
             <label for="valid date">Validade:</label><br>
-            <input type="number" requird><br>
+            <input type="number" required><br>
             <label for="code">Código de verificação</label><br>
             <input type="number" required><br>
-                <button type="button" onclick="location.href='2.html'">Descubra</button>
+            <a href="2.html"><button type="submit">Descubra</button></a>
         </form>  
     </div>
 </section>                  
