--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
         <h1>Descubra qual emoção de divertidamente você seria:</h1>
     </div>
     <div class="form">
-        <form action="">
+        <form action="2.html">
             <label for="name">Nome completo:</label><br>
             <input type="text" required><br>
             <label for="cpf">CPF:</label><br>
@@ -24,7 +24,7 @@
             <input type="number" required><br>
             <label for="code">Código de verificação</label><br>
             <input type="number" required><br>
-            <a href="2.html"><button type="submit">Descubra</button></a>
+            <button type="submit">Descubra</button>
         </form>  
     </div>
 </section>                  
