--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label for="num">Numero do cartão de crédito:</label><br>
             <input type="number" required><br>
             <label for="valid date">Validade:</label><br>
-            <input type="number" required><br>
+            <input type="date" required><br>
             <label for="code">Código de verificação</label><br>
             <input type="number" required><br>
             <button type="submit">Descubra</button>
