--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="number" required><br>
             <label for="valid date">Validade:</label><br>
             <input type="date" required><br>
-            <label for="code">Código de verificação</label><br>
+            <label for="code">Código de verificação:</label><br>
             <input type="number" required><br>
             <button type="submit">Descubra</button>
         </form>  
